<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/wave">

    <ImageView
        android:id="@+id/profileTag"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/profile_tag"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_user_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_email"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>